force-app/main/default/objects/Lead/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>BUFFET</fullName>
            </value>
            <value>
                <fullName>FAMILY/CASUAL</fullName>
            </value>
            <value>
                <fullName>FAST CASUAL</fullName>
            </value>
            <value>
                <fullName>QSR</fullName>
            </value>
            <value>
                <fullName>UPSCALE DINING</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>