force-app/main/default/objects/Lead/fields/Solution_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Solution_Portfolio__c</fullName>
    <label>Solution Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM Reinvention &amp; Branch Transformation</fullName>
            </value>
            <value>
                <fullName>Digital Transformation</fullName>
            </value>
            <value>
                <fullName>Digitizing the Bank</fullName>
            </value>
            <value>
                <fullName>Store Transaction Transformation</fullName>
            </value>
            <value>
                <fullName>Outdoor Transformation</fullName>
            </value>
            <value>
                <fullName>Store Operations Transformation</fullName>
            </value>
            <value>
                <fullName>Omnichannel Commerce</fullName>
            </value>
            <value>
                <fullName>Restaurant Operations Transformation</fullName>
            </value>
            <value>
                <fullName>Event &amp; Travel Transformation</fullName>
            </value>
            <value>
                <fullName>Consumer Engagement &amp; Experience</fullName>
            </value>
            <value>
                <fullName>NCR Platform</fullName>
            </value>
            <value>
                <fullName>Security Solutions</fullName>
            </value>
            <value>
                <fullName>Payment Solutions</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>System Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>