force-app/main/default/objects/Lead/fields/SQL_Date__c.field-meta.xml
<CustomField>
    <fullName>SQL_Date__c</fullName>
    <label>SQL Trigger Date</label>
    <type>DateTime</type>
</CustomField>