force-app/main/default/objects/Lead/fields/SQL_Trigger__c.field-meta.xml
<CustomField>
    <fullName>SQL_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQL Trigger</label>
    <type>Checkbox</type>
</CustomField>