force-app/main/default/objects/Lead/fields/Sub_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Lead_Source__c</fullName>
    <label>Sub Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AdWords</fullName>
            </value>
            <value>
                <fullName>American Banker</fullName>
            </value>
            <value>
                <fullName>American Banker Association</fullName>
            </value>
            <value>
                <fullName>American Nightclub Association</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>ATMIA.com</fullName>
            </value>
            <value>
                <fullName>BAI</fullName>
            </value>
            <value>
                <fullName>Basis</fullName>
            </value>
            <value>
                <fullName>Belgrade</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Buyer Zone</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Credit Union Journal</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>DoubleClick</fullName>
            </value>
            <value>
                <fullName>eBook dependent</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>FastCasual</fullName>
            </value>
            <value>
                <fullName>FDIC</fullName>
            </value>
            <value>
                <fullName>Financial Brand</fullName>
            </value>
            <value>
                <fullName>Gartner Insights</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Illinois Credit Union League</fullName>
            </value>
            <value>
                <fullName>Infogroup-New Business (Data Axle)</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>