force-app/main/default/objects/Lead/fields/SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>SubIndustry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AIRLINES</fullName>
                <label>Airlines</label>
            </value>
            <value>
                <fullName>AIRPORTS</fullName>
                <label>Airports</label>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>ATM Deployers</fullName>
            </value>
            <value>
                <fullName>Central Banks, National Institutions &amp; Clearing Houses</fullName>
            </value>
            <value>
                <fullName>Processors, Acquirers &amp; Merchant Gateways</fullName>
            </value>
            <value>
                <fullName>Networks</fullName>
            </value>
            <value>
                <fullName>Cash in Transit</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Cinema &amp; Theatres</fullName>
            </value>
            <value>
                <fullName>Stadium &amp; Venues</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Mass Merchants</fullName>
            </value>
            <value>
                <fullName>Drug Stores</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Food, Drug, Mass Merchant (FDMM)</fullName>
            </value>
            <value>
                <fullName>Convenience Fuel Retail (CFR)</fullName>
            </value>
            <value>
                <fullName>Wholesale/Supercenters</fullName>
            </value>
            <value>
                <fullName>Department &amp; Specialty Retail (DSR)</fullName>
            </value>
            <value>
                <fullName>Petroleum Convenience Retail (PCR)</fullName>
            </value>
            <value>
                <fullName>Wholesale Distribution</fullName>
            </value>
            <value>
                <fullName>Telecom Providers</fullName>
            </value>
            <value>
                <fullName>Technology Providers</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Digital Banking</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Branch Transformation</fullName>
            </value>
            <value>
                <fullName>Transaction &amp; Channel Platforms</fullName>
            </value>
            <value>
                <fullName>ATMs &amp; Self-Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>