force-app/main/default/objects/Lead/fields/SWM__c.field-meta.xml
<CustomField>
    <fullName>SWM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>6.7 field</description>
    <label>SWM</label>
    <type>Checkbox</type>
</CustomField>