force-app/main/default/objects/Lead/fields/Sys_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Sys_Campaign_Id__c</fullName>
    <description>This campaign filed is used to track create campaign member if leads get created trough Live Chat application.</description>
    <label>Sys Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>