force-app/main/default/objects/Lead/fields/Term4_Model__c.field-meta.xml
<CustomField>
    <fullName>Term4_Model__c</fullName>
    <description>Matt Upton</description>
    <label>Term4 Model</label>
    <length>4</length>
    <type>Text</type>
</CustomField>