force-app/main/default/objects/Lead/fields/TestCheckBox__c.field-meta.xml
<CustomField>
    <fullName>TestCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestCheckBox</label>
    <type>Checkbox</type>
</CustomField>