force-app/main/default/objects/Lead/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Next 3 months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6+ Months</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>