force-app/main/default/objects/Lead/fields/Timing_for_Desired_Solution__c.field-meta.xml
<CustomField>
    <fullName>Timing_for_Desired_Solution__c</fullName>
    <inlineHelpText>What is the Prospect&apos;s timeline for getting a new solution in their business</inlineHelpText>
    <label>Timing for Desired Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6-9 Months</fullName>
            </value>
            <value>
                <fullName>9-12 Months</fullName>
            </value>
            <value>
                <fullName>12+ Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>