force-app/main/default/objects/Lead/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>C-level</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>