force-app/main/default/objects/Lead/fields/Total_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Asset_Value__c</fullName>
    <label>Annual Company Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Over $4B USD</fullName>
            </value>
            <value>
                <fullName>Under $4B USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>