force-app/main/default/objects/Lead/fields/Using_NCR_HW__c.field-meta.xml
<CustomField>
    <fullName>Using_NCR_HW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Using NCR HW</label>
    <type>Checkbox</type>
</CustomField>