force-app/main/default/objects/Lead/fields/What_can_NCR_help_you_with_today__c.field-meta.xml
<CustomField>
    <fullName>What_can_NCR_help_you_with_today__c</fullName>
    <label>What can NCR help you with today?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>