force-app/main/default/objects/Lead/fields/Year_Established__c.field-meta.xml
<CustomField>
    <fullName>Year_Established__c</fullName>
    <description>Year the business first opened.</description>
    <label>Year Established</label>
    <length>4</length>
    <type>Text</type>
</CustomField>