force-app/main/default/objects/Lead/fields/zip_length__c.field-meta.xml
<CustomField>
    <fullName>zip_length__c</fullName>
    <formula>LEN(PostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zip length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>