force-app/main/default/objects/Lead/fields/Zip_Or_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Or_Postal_Code__c</fullName>
    <label>Zip Or Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>