force-app/main/default/objects/Lead/recordTypes/Customer_Lead.recordType-meta.xml
<RecordType>
    <fullName>Customer_Lead</fullName>
    <active>true</active>
    <businessProcess>Customer lead</businessProcess>
    <description>Standard end-user customer lead record type</description>
    <label>Customer Lead</label>
</RecordType>