force-app/main/default/objects/Lead/recordTypes/HOSP_Restaurant.recordType-meta.xml
<RecordType>
    <fullName>HOSP_Restaurant</fullName>
    <active>true</active>
    <businessProcess>Customer lead</businessProcess>
    <description>Record type for Restaurantdata.com leads</description>
    <label>HOSP Restaurant</label>
</RecordType>