force-app/main/default/objects/Lead/recordTypes/Partner_Community_Lead.recordType-meta.xml
<RecordType>
    <fullName>Partner_Community_Lead</fullName>
    <active>true</active>
    <businessProcess>Partner Managed Lead</businessProcess>
    <label>Partner Community Lead</label>
</RecordType>