force-app/main/default/objects/Lead/recordTypes/Partner_Lead.recordType-meta.xml
<RecordType>
    <fullName>Partner_Lead</fullName>
    <active>true</active>
    <businessProcess>Partner Recruitment</businessProcess>
    <description>Partner prospect or lead record type</description>
    <label>Partner Lead</label>
</RecordType>