force-app/main/default/objects/Lead/recordTypes/Retail_Channel_Partner_Managed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Channel_Partner_Managed</fullName>
    <active>true</active>
    <businessProcess>Lead ISR Sales Leader</businessProcess>
    <description>Leads managed alongside a Channel/Partner Representative</description>
    <label>Retail Channel/Partner Managed</label>
</RecordType>