force-app/main/default/objects/Lead/recordTypes/Retail_NCR_Enterprise_Managed.recordType-meta.xml
<RecordType>
    <fullName>Retail_NCR_Enterprise_Managed</fullName>
    <active>true</active>
    <businessProcess>Lead ISR Sales Leader</businessProcess>
    <description>Leads managed alongside an NCR Account Executive</description>
    <label>Retail NCR Enterprise Managed</label>
</RecordType>