force-app/main/default/objects/Lead/recordTypes/Services_Lead.recordType-meta.xml
<RecordType>
    <fullName>Services_Lead</fullName>
    <active>true</active>
    <businessProcess>Services Process</businessProcess>
    <description>Record type for Services Sales team to track internal Leads</description>
    <label>Services Lead</label>
</RecordType>