force-app/main/default/objects/Lead/validationRules/CATM_Last_Name_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CATM_Last_Name_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
CATM_Record__c,
OR(
CONTAINS( LastName ,&quot;[not provided] &quot;),
ISBLANK( LastName )
)
)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Please fill the Last Name</errorMessage>
</ValidationRule>