force-app/main/default/objects/Lead/validationRules/CATM_Require_Phone_or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>CATM_Require_Phone_or_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
CATM_Record__c = TRUE,
ISBLANK(Email),
OR(
ISBLANK(Phone)
)
)</errorConditionFormula>
    <errorMessage>ERROR:  A Phone Number is Blank, Email are required.</errorMessage>
</ValidationRule>