force-app/main/default/objects/Lead/validationRules/Check_Are_They_Specialized_Lead_ISR.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Are_They_Specialized_Lead_ISR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
 CATM_Record__c = false,
ISPICKVAL(Are_They_Specialized__c, &quot;Yes&quot;),ISBLANK(Type_of_Specialty__c ))</errorConditionFormula>
    <errorDisplayField>Type_of_Specialty__c</errorDisplayField>
    <errorMessage>Please fill the field</errorMessage>
</ValidationRule>