force-app/main/default/objects/Lead/validationRules/Check_CFR_Branded_Lead_ISR.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_CFR_Branded_Lead_ISR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
 CATM_Record__c = false,
ISPICKVAL( CFR_Branded_or_Unbranded__c , &quot;Branded&quot;),ISBLANK(TEXT(Name_of_Brand__c)))</errorConditionFormula>
    <errorDisplayField>Name_of_Brand__c</errorDisplayField>
    <errorMessage>Please fill the Brand Name</errorMessage>
</ValidationRule>