force-app/main/default/objects/Lead/validationRules/Check_Name_of_Brand_if_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Name_of_Brand_if_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
 CATM_Record__c = false,
ISPICKVAL(Name_of_Brand__c , &quot;Other&quot;),ISBLANK( Name_of_Brand_if_Other__c ))</errorConditionFormula>
    <errorDisplayField>Name_of_Brand_if_Other__c</errorDisplayField>
    <errorMessage>If &apos;Other&apos; is selected in &apos;Name Of Brand&apos; then this field can&apos;t be left empty</errorMessage>
</ValidationRule>