force-app/main/default/objects/Lead/validationRules/Lock_Partner_Record_Type_for_ISR1_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Partner_Record_Type_for_ISR1_Lead</fullName>
    <active>true</active>
    <description>For ISR1 Retail Lead, if lead type is Partner Import List then, we won&apos;t allow record type to change.</description>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
 CATM_Record__c = false,
				PRIORVALUE(RecordTypeId) = &apos;012700000001S2H&apos;,
				CONTAINS($Profile.Name, &apos;Retail&apos;),
	   ISPICKVAL(LeadType__c, &apos;Partner List Import&apos;),
    ISCHANGED(RecordTypeId) 
		)</errorConditionFormula>
    <errorMessage>Record Type can&apos;t be modified when LeadType is &apos;Partner List Import&apos;</errorMessage>
</ValidationRule>