force-app/main/default/objects/Lead/validationRules/Restrict_Partner_User_not_to_change_Owne.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Partner_User_not_to_change_Owne</fullName>
    <active>true</active>
    <description>In Partner Community, Partner User can&apos;t change the record owner.</description>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
 CATM_Record__c = false,
ISPICKVAL($UserRole.PortalRole,&apos;User&apos;)
, OwnerId &lt;&gt; $User.Id
, ($Profile.Name &lt;&gt; &quot;Soup Integration&quot;)
,($Profile.Name &lt;&gt; &quot;iPaas Administration&quot;)
)</errorConditionFormula>
    <errorMessage>You are not authorized to change owner</errorMessage>
</ValidationRule>