force-app/main/default/objects/Lead/listViews/Advanced_Hospitality_Lead.listView-meta.xml
<ListView>
    <fullName>Advanced_Hospitality_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Advanced Hospitality</label>
    <queue>Advanced_Hospitality</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>