force-app/main/default/objects/Lead/listViews/All_LeadY.listView-meta.xml
<ListView>
    <fullName>All_LeadY</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Country__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LeadSource__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Campaign_Type__c</columns>
    <columns>LEAD.CONVERTED</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Lead</label>
    <sharedTo>
        <group>Partner_Community_Lead_Manager_Group</group>
    </sharedTo>
</ListView>