force-app/main/default/objects/Lead/listViews/All_My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>All_My_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Trading_Legal_Name__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Lead_Marketing_Notes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Researching,Contacted</value>
    </filters>
    <label>CATM My Open Leads</label>
    <sharedTo>
        <role>AUS_NZ_IBG_Team_BDMs_1_hunters</role>
        <role>AUS_NZ_IBG_Team_BDMs_2_hunters</role>
        <role>AUS_NZ_IBG_Team_BDMs_farmers</role>
        <role>AUS_NZ_IBG_Team_BDMs_hunters</role>
        <role>AUS_NZ_IBG_Team_Leader_farmers</role>
        <role>Australia_NZ_IBG_Team_Leader_hunters</role>
        <role>Australia_NZ_IBG_Team_Mngr_1_hunters</role>
        <role>Australia_NZ_IBG_Team_Mngr_2_hunters</role>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TEs</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>