force-app/main/default/objects/Lead/listViews/Andreas_Google_AdWords_Open_Leads.listView-meta.xml
<ListView>
    <fullName>Andreas_Google_AdWords_Open_Leads</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Age_in_days__c</columns>
    <columns>LEAD.CURRENCY_ISO_CODE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Trading_Legal_Name__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Country_Code__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Researching,Contacted</value>
    </filters>
    <label>CATM UK HubSpot OPEN Leads</label>
    <language>en_US</language>
    <sharedTo>
        <role>UK_ROI_IBG_Team_Mngr</role>
        <role>UK_ROI_IBG_Team_TMs</role>
    </sharedTo>
</ListView>